# kubernetes-portfolio

./: Dockerfile  README.md  backend.yml  frontend-config.yml  frontend.yml  ingress.yml  notes.txt  pyproject.toml
Backend/: main.py  qualifications.py
ConfigMaps/: frontend-default-config.yml  frontend-index-config.yml
Frontend/: default.conf  index.html
portfolio/: index.html
