[project]
name = "kubernetes-portfolio"
description = "A portfolio of myself deployed in kubernetes"
version = "0.10.6"
authors = [
    { name = "Dan Jackson-Thomas" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard-no-fastapi-cloud-cli]==0.136.1",
  "uvicorn[standard]"
]
